# lri-data-gen-v2

./: .env.example  .gitignore  CHANGELOG.md  README.md  cli.py  mcp_server.py  pyproject.toml  requirements.txt
config/: example.yaml
data/: motive_matrix.json
docs/: architecture.md  config-reference.md  cost.md  mcp.md  motives.md  output.md  prompt.md  troubleshooting.md  usage.md
prompts/: legacy.txt
scripts/: gen_motives_doc.py
src/: cost.py  models.py  pipeline.py  prompt_builder.py  rate_limit.py  report.py  runner.py  wizard.py
src/llm/: anthropic.py  interface.py  openai.py  registry.py
